@@ -1,3 +1,8 @@
+2010-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/authdialog.py (PluginFlickrDialog): Added a black magic
+	  for avoiding unintended GC for sub instances.
+
 2010-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoimageclutter.py, actors.py, animation.py: Improved icon
